[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/traps/spaceship/spaceship.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Traps/Spaceship.gd" type="Script" id=2]
[ext_resource path="res://Assets_2/ASSETS/sound and music/ZAP.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 46.671

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 254.544, 319.097 )

[node name="Spaceship" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 450, 1000 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.33636, -6.23627 )
shape = SubResource( 1 )

[node name="Right_timer" type="Timer" parent="."]

[node name="Left_timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.89767, 349.057 )
shape = SubResource( 2 )

[node name="Gun_timer" type="Timer" parent="."]
autostart = true

[node name="fireball_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.078
[connection signal="timeout" from="Right_timer" to="." method="_on_Right_timer_timeout"]
[connection signal="timeout" from="Left_timer" to="." method="_on_Left_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Gun_timer" to="." method="_on_Gun_timer_timeout"]
